--- a/index.html
+++ b/index.html
@@ -3,27 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <title>Game Engine</title>
-<style>
+    <style>
         /* Simple CSS to make the canvas fit the entire window */
         body, html {
             height: 100%;
             margin: 0;
         }
+
         canvas {
             width: 100%;
             height: 100%;
-	background: black;
+            background: black;
         }
     </style>
 </head>
 <body>
 <canvas id="canvas"></canvas>
-    <script>
-        // Specify the canvas element for Emscripten
-        var Module = {
-            canvas: document.getElementById('canvas')
-        };
-    </script>
-    <script src="GameEngine.js"></script>
+<script>
+    // Specify the canvas element for Emscripten
+    var Module = {
+        canvas: document.getElementById('canvas')
+    };
+</script>
+<script src="GameEngine.js"></script>
+<script>
+    function connect() {
+        return new Promise((resolve) => {
+            let socket = new WebSocket("ws://127.0.0.1:3001");
+
+            let connected = false;
+
+            socket.onopen = function (e) {
+                // console.log("Connected to hot reloader.");
+                connected = true;
+            };
+
+            socket.onmessage = function (event) {
+                const message = JSON.parse(event.data);
+
+                if (message.name === "buildHash") {
+                    const buildHash = "#" + message.content;
+                    if (window.location.hash !== buildHash) {
+                        // console.log("Refreshing page...");
+                        window.location.hash = buildHash;
+                        window.location.reload(true);
+                    } else {
+                        // console.log("Page matches build hash and does not need to be refreshed.");
+                    }
+                }
+            };
+
+            socket.onclose = function (event) {
+                if (connected) {
+                    // console.log("Lost connection to hot reloader. Attempting to reconnect...")
+                    // console.log(event);
+                }
+                resolve();
+            };
+
+            socket.onerror = function (error) {
+                // console.log(`[error] socket error`);
+                // console.log(error);
+                resolve();
+            };
+        });
+    }
+
+    async function keepConnecting() {
+        // console.log("Attempting to connect to hot reloader...");
+        while (true) {
+            await connect();
+        }
+    }
+
+    keepConnecting();
+</script>
 </body>
 </html>
