--- a/index.html
+++ b/index.html
@@ -15,9 +15,28 @@
             height: 100%;
             background: black;
         }
+
+        /*.spinner {*/
+        /*    width: 50px;*/
+        /*    height: 50px;*/
+        /*    background-color: #333;*/
+        /*    animation: spin 2s linear infinite;*/
+        /*    margin: 100px auto;*/
+        /*    border-radius: 50%;*/
+        /*}*/
+
+        /*@keyframes spin {*/
+        /*    from {*/
+        /*        transform: rotate(0deg);*/
+        /*    }*/
+        /*    to {*/
+        /*        transform: rotate(360deg);*/
+        /*    }*/
+        /*}*/
     </style>
 </head>
 <body>
+<!--<div class="spinner">spinner</div>-->
 <canvas id="canvas"></canvas>
 <script>
     // Specify the canvas element for Emscripten
