--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         }
 
         canvas {
+            display: block;
             width: 100%;
             height: 100%;
             background: black;
