auto package assets and shader when they change

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     };
 </script>
 <script src="GameEngine.js"></script>
+<script src="assets.js"></script>
+<script src="shaders.js"></script>
 <script>
     function connect() {
         return new Promise((resolve) => {
