refactor to separate engine and sandbox cmake

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         canvas: document.getElementById('canvas')
     };
 </script>
-<script src="GameEngine.js"></script>
+<script src="Sandbox.js"></script>
 <script src="assets.js"></script>
 <script src="shaders.js"></script>
 <script>
