process hdr image in js worker

--- a/Sandbox/webBuildStuff/index.html
+++ b/Sandbox/webBuildStuff/index.html
@@ -45,6 +45,7 @@
         canvas: document.getElementById('canvas')
     };
 </script>
+<script src="emscriptenUtility.js"></script>
 <script src="Sandbox.js"></script>
 <script src="assets.js"></script>
 <script>
