fix browser reloader

--- a/Sandbox/platform/emscripten/index.html
+++ b/Sandbox/platform/emscripten/index.html
@@ -53,12 +53,12 @@
 
         while (true) {
             const runHash = await getRunHash();
-            if (runHash !== lastRunHash) {
+            if (runHash !== "" && runHash !== lastRunHash) {
                 localStorage.setItem("runHash", runHash);
                 window.location.reload();
             }
 
-            await new Promise(resolve => setTimeout(resolve, 250));
+            await new Promise(resolve => setTimeout(resolve, 1000));
         }
     }
 
