--- a/Sandbox/platform/emscripten/index.html
+++ b/Sandbox/platform/emscripten/index.html
@@ -22,7 +22,10 @@
 <script>
     // Specify the canvas element for Emscripten
     var Module = {
-        canvas: document.getElementById('canvas')
+        canvas: document.getElementById('canvas'),
+        // setStatus: (text) => {
+        //     console.log(text);
+        // },
     };
 </script>
 <script src="Sandbox.js"></script>
